# shogi-chess-web

./: .env.example  .eslintrc.js  .gitignore  ASSETS_GUIDE.md  DEPLOYMENT.md  README.md  WEB_STRUCTURE.md  next.config.js  package-lock.json  package.json  vercel.json
app/: globals.css  layout.tsx  page.tsx
app/editor/: page.tsx
app/feedback/: page.tsx
app/local/: page.tsx
app/login/: page.tsx
components/: AILevelSelector.tsx  Board.tsx  BoardEditor.tsx  BoardSelector.tsx  HandPieces.tsx  Piece.tsx  PromotionModal.tsx  RoomList.tsx
docs/: BUGFIX_INFINITE_LOOP.md  CHECK_MIGRATION.sql  CUSTOM_BOARD_EDITOR.md  GAME_SYNC_DEBUG.md  MIGRATION_001_ADD_LAST_ACTIVITY.md  README.md  REALTIME_ALREADY_ENABLED.md  REDUCE_NETWORK_TRAFFIC.md  SUPABASE_REALTIME_SETUP.md  SUPABASE_SETUP.md  TESTING_CLEANUP.md  WEB_STRUCTURE.md
hooks/: useSocket.ts  useSupabaseRealtime.ts
lib/: types.ts
migrations/: MIGRATION_001_INITIAL_SETUP.sql  MIGRATION_002_AUTH_AND_BOARDS.sql  MIGRATION_003_EXTEND_ROOMS.sql  MIGRATION_004_ENABLE_RLS.sql  README.md
release-notes/: README.md  RELEASE_NOTES_v0.3.7.md  RELEASE_NOTES_v0.4.0.md
server/: .env.example  package-lock.json  package.json
styles/: board.module.css  hand.module.css  indicators.css  pieces.module.css  promotion.module.css
wasm-ai/: Cargo.toml
wasm-ai/pkg/: hybrid_board_ai_wasm.d.ts  hybrid_board_ai_wasm.js  hybrid_board_ai_wasm_bg.wasm  hybrid_board_ai_wasm_bg.wasm.d.ts  package.json
wasm-ai/src/: board.rs  config.rs  eval.rs  lib.rs  moves.rs  pst.rs  search.rs  tt.rs  types.rs  zobrist.rs
workers/: ai.worker.ts
(+36 files in other folders)
